--- a/12_Shop_MultiProduct/Views/Shared/_partial/_FooterPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_FooterPartial.cshtml
@@ -19,16 +19,10 @@
                                 </h4>
                                 <div class="info clearfix">
                                     <p>@commonInfo.Address <a target="_blank" href="/home/contact">Xem bản đồ</a></p>
-                                    <p>Tư Vấn Bán Hàng (8h - 20h hằng ngày) <a href="tel:@commonInfo.HotLine">@Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</a></p>
-                                    <p class="col50">Tư Vấn Đổi Trả (8h - 20h hằng ngày)<span>@Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.OtherPhone)</span></p>
+                                    <p>Tư Vấn Bán Hàng (8h - 20h hằng ngày) <a href="tel:@commonInfo.HotLine">@Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</a></p>                                    
                                 </div>
 
                             </div>
-
-
-
-
-
 
                             <div class="col-sm-6 col-xs-12 left-social">
                                 <h4 class="title">LIÊN KẾT </h4>
@@ -86,15 +80,7 @@
                                     <li>
                                         <a href="/about">Giới thiệu</a>
                                     </li>
-                                    <li>
-                                        <a href="/shippolicy">Chính sách vận chuyển</a>
-                                    </li>
-                                    <li>
-                                        <a href="/ProductReturnPolicy">Chính sách đổi trả</a>
-                                    </li>
-                                    <li>
-                                        <a href="/WarrantyPolicy">Chính sách bảo hành</a>
-                                    </li>
+                                    
                                     <li>
                                         <a href="/PaymentInfo">Hướng dẫn thanh toán</a>
                                     </li>
@@ -105,7 +91,7 @@
                                 <h4 class="title">Tin tức</h4>
                                 <ul class="list-links">
                                     <li>
-                                        <a href="/Blog">Blogs</a>
+                                        <a href="/search">Blogs</a>
                                     </li>
 
                                     <li>
