--- a/12_Shop_MultiProduct/html/css/style.scss
+++ b/12_Shop_MultiProduct/html/css/style.scss
@@ -230,7 +230,7 @@
 }
 
 .box-slide-home {
-  margin: 15px 0 0;
+  margin: 0;
   .main-slide-home {
     margin-left: -10px; margin-right: -10px; overflow: hidden; clear: both;
     .banner-slider, .banner-right {
