--- a/12_Shop_MultiProduct-2/Views/Home/Index.cshtml
+++ b/12_Shop_MultiProduct-2/Views/Home/Index.cshtml
@@ -92,11 +92,10 @@
                     <div class="title-top">
                         <h2 class="title">Top bán chạy</h2>
                     </div>
-
                 </div>
 
 
-                <div class="owl-carousel owl-carousel-4" id="">
+                <div class="owl-carousel owl-carousel-3" id="">
                     @for (var i = 0; i < bestSaleList.Item.Length; i++)
                     {
                         var item = bestSaleList.Item[i];
@@ -132,155 +131,7 @@
     }
 }
 
-    @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-    {
-
-        foreach (var items in commonInfo.ProductCategoryList)
-        {
-            AnperoService sv = new AnperoService();
-            AnperoFrontend.WebService.SearchResult newestProduct = sv.GetProductByParentCategory(ViewBag.storeId,ViewBag.TokenKey, items.Id,1,6, 0);
-            if (newestProduct != null && newestProduct.Item.Length > 0)
-            {
-                <div class="box-top-products box-slide">
-                    <div class="container">
-                        <div class="box-title-new">
-                            <div class="title-top">
-                                <h2 class="title">@items.Name</h2>
-                            </div>
-
-                        </div>
-                        <div class="owl-carousel owl-carousel-4" id="">
-                            @for (var i = 0; i < newestProduct.Item.Length; i++)
-                            {
-                                var item = newestProduct.Item[i];
-                                <div class="item box-product">
-                                    <div class="main">
-                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="images">
-                                            @if (item.IsInstock)
-                                            {
-                                                <span class="lable-sale"> mới</span>
-                                            }
-                                            else
-                                            {
-                                                <span class="lable-sold">Hết hàng</span>
-                                            }
-                                            <img src="@item.Images" alt="@item.PrName">
-                                        </a>
-                                        <div class="list-action">
-                                            <a href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè" class="btn-quickview-1"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="view-product"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
-                                            @if (item.IsInstock)
-                                            {
-                                                <a href="javascript:Cart.addProduct(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')" class="add-cart" title="Mua hàng">
-                                                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                                </a>
-                                            }
-                                            else
-                                            {
-                                                <a href="javascript:void(0);" class="add-cart" title="Mua hàng">
-                                                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                                </a>
-                                            }
-                                        </div>
-                                        <div class="detail text-center clearfix">
-                                            <h3 class="name">
-                                                <a class="" ref="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                                    @item.PrName
-                                                </a>
-                                            </h3>
-                                            <div class="box-prince">
-                                                <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                                @if (item.IsSale)
-                                                {
-                                                    <span class="prince-old">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                                }
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-                <!--box-top-products-->
-            }
-        }
-
-
-    }
-
-@*@if (ViewData["newestProduct"] != null)
-{
-    var newestProduct = (AnperoFrontend.WebService.SearchResult)ViewData["newestProduct"];
-    if (newestProduct != null && newestProduct.Item.Length > 0)
-    {*@
-        @*<div class="box-top-products box-slide">
-            <div class="container">
-                <div class="box-title-new">
-                    <div class="title-top">
-                        <h2 class="title">Sản phẩm mới</h2>
-                    </div>
-
-                </div>
-
-
-                <div class="owl-carousel owl-carousel-4" id="">
-                    @for (var i = 0; i < newestProduct.Item.Length; i++)
-                    {
-                        var item = newestProduct.Item[i];
-                        <div class="item box-product">
-                            <div class="main">
-                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="images">
-                                    @if (item.IsInstock)
-                                    {
-                                        <span class="lable-sale"> mới</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="lable-sold">Hết hàng</span>
-                                    }
-                                    <img src="@item.Images" alt="@item.PrName">
-                                </a>
-                                <div class="list-action">
-                                    <a href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè" class="btn-quickview-1"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="view-product"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
-                                    @if (item.IsInstock)
-                                    {
-                                        <a href="javascript:Cart.addProduct(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')" class="add-cart" title="Mua hàng">
-                                            <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                        </a>
-                                    }
-                                    else
-                                    {
-                                        <a href="javascript:void(0);" class="add-cart" title="Mua hàng">
-                                            <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                        </a>
-                                    }
-                                </div>
-                                <div class="detail text-center clearfix">
-                                    <h3 class="name">
-                                        <a class="" ref="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                            @item.PrName
-                                        </a>
-                                    </h3>
-                                    <div class="box-prince">
-                                        <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                        @if (item.IsSale)
-                                        {
-                                            <span class="prince-old">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                        }
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>*@
-        <!--box-top-products-->
-    @*}
-}*@
-
+    
 @if (ViewBag.Ads3 != null)
 {
     Ads[] ads3 = (Ads[])ViewBag.Ads3;
@@ -325,7 +176,7 @@
             </div>
 
             <div class="box-top-products box-slide">
-                <div class="owl-carousel owl-carousel-3">
+                <div class="">
                     @foreach (var item in FeatureArticle.ItemList)
                     {
                         <div class="item item-new">
@@ -337,7 +188,6 @@
                                 </div>
                                 <ul class="info-new">
                                     <li class="time"><i class="fa fa-calendar" aria-hidden="true"></i> <time>@Anpero.StringHelpper.ConvertDateTime(item.CreateDate).ToString("dd/mm/yyyy")</time></li>
-
                                     <li class="post"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>@item.CategoryName</span></li>
                                 </ul>
                             </div>
