--- a/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -24,12 +24,7 @@
     @Styles.Render("~/bundle/css")
     @RenderSection("health", required: false)
     @RenderSection("Styles", required: false)
-    <link href='/static/css' rel='stylesheet' type='text/css'>
-    <style>
-        #google_translate_element2, .goog-te-banner-frame, .skiptranslate {
-            display: none;
-        }
-    </style>
+    <link href='/static/css' rel='stylesheet' type='text/css'>    
 </head>
 <body>
     @Html.Partial("_partial/_HeaderPartial")
@@ -42,9 +37,9 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                         <div class="page-title">
-                            <h2 style="border:none;">Đăng ký và liên hệ</h2>
+                            <h2 style="border:none;">ĐĂNG KÝ NHẬN THÔNG TIN CHÍNH SÁCH BẢNG GIÁ MỚI NHẤT</h2>
                             <p>Hãy để lại thông tin liên hệ của bạn để nhận thông tin miễn phí từ chúng tôi !</p>
-                            <p>Hotline :  097.925.0696  - 097.544.1818</p>
+                            <p>Hotline :  @commonInfo.HotLine</p>
                         </div>
                     </div>
                 </div>
@@ -100,10 +95,11 @@
     @Html.Raw(commonInfo.PageScript)
 
     @RenderSection("scripts", required: false)
+
     <script type="text/javascript">
         var googleCatcha;
         $(window).load(function () {
-            Cart.bindCart();
+            
             googleCatcha = grecaptcha.render('g-recaptcha', {
                 'sitekey': googleCapchaSitekey,
                 'theme': 'light',
@@ -111,17 +107,6 @@
             });
         });
     </script>
-    @*google translate begin*@
-    
-    <div id="google_translate_element2"></div>
-    <script type="text/javascript">
-        function GTranslateGetCurrentLang() { var keyValue = document.cookie.match('(^|;) ?googtrans=([^;]*)(;|$)'); return keyValue ? keyValue[2].split('/')[2] : null; }
-        function GTranslateFireEvent(element, event) { try { if (document.createEventObject) { var evt = document.createEventObject(); element.fireEvent('on' + event, evt) } else { var evt = document.createEvent('HTMLEvents'); evt.initEvent(event, true, true); element.dispatchEvent(evt) } } catch (e) { } }
-        function doGTranslate(lang_pair) {
-            if (lang_pair.value) lang_pair = lang_pair.value; if (lang_pair == '') return; var lang = lang_pair.split('|')[1]; if (GTranslateGetCurrentLang() == null && lang == lang_pair.split('|')[0]) return; var teCombo; var sel = document.getElementsByTagName('select'); for (var i = 0; i < sel.length; i++) if (sel[i].className == 'goog-te-combo') teCombo = sel[i]; if (document.getElementById('google_translate_element2') == null || document.getElementById('google_translate_element2').innerHTML.length == 0 || teCombo.length == 0 || teCombo.innerHTML.length == 0) { setTimeout(function () { doGTranslate(lang_pair) }, 500) } else { teCombo.value = lang; GTranslateFireEvent(teCombo, 'change'); GTranslateFireEvent(teCombo, 'change') } $("body").css("top", 0);
-        }
-        function googleTranslateElementInit2() { new google.translate.TranslateElement({ pageLanguage: 'vi', autoDisplay: false }, 'google_translate_element2'); }
-    </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+
 </body>
 </html>
