--- a/12_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/12_Shop_MultiProduct/assets/stylesheet/style.css
@@ -1876,7 +1876,7 @@ a {
     }
 
 .contact-area .section-bg::after {
-    background-color: rgb(0, 166, 81);
+    background-color: rgb(2 47 76);
 }
 
 .contact-area .page-title {
@@ -1905,8 +1905,10 @@ a {
 .contact-area .battn {
     background-color: #ffffff;
     border: medium none;
-    color: #64be43;
+    color: #0B4948;
     min-width: 200px;
+    background: #9f772c;
+    background: linear-gradient( 135deg, #9f772c 0%, #ffe080 23%, #b58e3b 41%, #b58e3b 42%, #f9e9a4 65%, #e0bf63 82%, #b48e3a 100%);
 }
 
 .battn {
