--- a/12_Shop_MultiProduct/html/css/style.css
+++ b/12_Shop_MultiProduct/html/css/style.css
@@ -50,7 +50,22 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .translateY-50 { transform: translateY(-50%); -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); }
 
-.view-all { font-size: 13px; color: #00a651; border: 1px solid; border-color: #00a651; padding: 5px 16px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; border-radius: 5px; text-decoration: none; text-shadow: none; font-weight: 400; display: inline-block; background: #fff; }
+.view-all {
+    font-size: 13px;
+    color: #022f4c;
+    border: 1px solid;
+    border-color: #022f4c;
+    padding: 5px 16px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-shadow: none;
+    font-weight: 400;
+    display: inline-block;
+    background: #fff;
+}
 .view-all.top-all { position: absolute; top: 50%; right: 5px; }
 .view-all:hover { color: #fff; background: #00a651; }
 
@@ -112,7 +127,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .box-slide .item:hover { -webkit-box-shadow: 0px 5px 10px 0px rgba(138, 138, 145, 0.8); -moz-box-shadow: 0px 5px 10px 0px rgba(138, 138, 145, 0.8); box-shadow: 0px 5px 10px 0px rgba(138, 138, 145, 0.8); }
 .box-slide .item:hover .list-action a { visibility: visible; filter: alpha(opacity=100); -khtml-opacity: 1; -moz-opacity: 1; opacity: 1; transform: translate(0px, 0px); -ms-transform: translate(0px, 0px); -webkit-transform: translate(0px, 0px); }
 .box-slide .item .icon-top { position: absolute; top: 10px; left: 17px; z-index: 1; }
-.box-slide .item .images { height: 192px; display: block; }
+.box-slide .item .images { width:100%; display: block; }
 .box-slide .item .images img { transition: all 0.35s ease-in-out 0s; -moz-transition: all 0.35s ease-in-out 0s; -o-transition: all 0.35s ease-in-out 0s; -webkit-transition: all 0.35s ease-in-out 0s; -ms-transition: all 0.35s ease-in-out 0s; max-height: 100%; margin: auto; display: block; width: auto; -webkit-transform-style: preserve-3d; transform-style: preserve-3d; }
 .box-slide .item .images:hover img { transform: rotateY(180deg); -webkit-transform: rotateY(180deg); -ms-transform: rotateY(180deg); -o-transform: rotateY(180deg); }
 .box-slide .item .detail { padding: 10px 0px; }
@@ -149,8 +164,38 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .box-slide-home .banner-right li:first-child { margin-bottom: 15px; }
 
 .box-title { position: relative; height: 45px; background: #fff; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; border-radius: 3px; margin: 0px 0px 20px; }
-.box-title .title { display: inline-block; background: #00a651; padding: 0 8px 0 12px; height: 100%; position: relative; margin: 0; float: left; -webkit-border-radius: 4px 0 0 4px; -moz-border-radius: 4px 0 0 4px; border-radius: 4px 0 0 4px; color: #fff; line-height: 45px; font-size: 16px; text-transform: uppercase; }
-.box-title .title:after { content: " "; display: block; width: 0; height: 0; margin-left: 2px; vertical-align: middle; border-top: 22px solid transparent; border-left: 15px solid; border-left-color: #00a651; border-right: 0 solid transparent; border-bottom: 23px solid transparent; position: absolute; top: 0; right: -15px; }
+    .box-title .title {
+        display: inline-block;
+        background: #022f4c;
+        padding: 0 8px 0 12px;
+        height: 100%;
+        position: relative;
+        margin: 0;
+        float: left;
+        -webkit-border-radius: 4px 0 0 4px;
+        -moz-border-radius: 4px 0 0 4px;
+        border-radius: 4px 0 0 4px;
+        color: #fff;
+        line-height: 45px;
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+        .box-title .title:after {
+            content: " ";
+            display: block;
+            width: 0;
+            height: 0;
+            margin-left: 2px;
+            vertical-align: middle;
+            border-top: 22px solid transparent;
+            border-left: 15px solid;
+            border-left-color: #022f4c;
+            border-right: 0 solid transparent;
+            border-bottom: 23px solid transparent;
+            position: absolute;
+            top: 0;
+            right: -15px;
+        }
 .box-title .title a { color: #fff; }
 .box-title .nav-list { text-align: right; line-height: 45px; float: right; }
 .box-title .nav-list li { display: inline-block; padding: 0px 10px; }
@@ -430,7 +475,10 @@ header .main-child.level-3 { left: 100%; top: 0; }
 footer { background: #E6E6E6; margin-top: 30px; }
 footer .box-top-footer { background: #000; color: #f1f1f1; padding: 30px 0; }
 footer .box-top-footer .left-top { margin-bottom: 20px; }
-footer .bottom-footer { background: #222; color: #f1f1f1; }
+    footer .bottom-footer {
+        background: #022f4c;
+        color: #f1f1f1;
+    }
 footer .title { background: transparent; color: #eaeaea; border-bottom: 1px solid #e1e1e1; text-transform: uppercase; font-size: 17px; margin-bottom: 10px; padding-bottom: 5px; width: 100%; }
 footer p { margin-bottom: 10px; line-height: 24px; }
 footer p span { display: block; }
